fix ad image alignment

--- a/in/style.scss
+++ b/in/style.scss
@@ -329,10 +329,14 @@ table {
   flex-direction: column;
   align-items: flex-start;
   background-image: url('/callout-graphic.png');
-  background-position: 330px center;
+  background-position: right center;
   background-repeat: no-repeat;
   background-size: 300px 300px;
   position: relative;
+
+  @media screen and (max-width: 768px) {
+    background-image: none;
+  }
 
   .callout-close {
     position: absolute;
